--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     volumes:
       - $HOME/.zshrc:/root/.zshrc
       - $PWD:/root/home/
+    ports:
+      - "8899:8899"
+      - "8900:8900"
     tty: true
     stdin_open: true
     restart: unless-stopped
