--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - $PWD:/mnt
+      - .:/mnt
     ports:
       - "8899:8899"
       - "8900:8900"
